fixed form spacing on create co buy group

--- a/createGroup/createGroup.css
+++ b/createGroup/createGroup.css
@@ -118,3 +118,6 @@ body {
 	z-index: 1;
 }
 
+.form-control-sm{
+	width: 100%;
+}
